2010-05-14  Alan McGovern  <amcgovern@novell.com>

	* provider.h:
	* provider.cpp:
	* dependencyobject.h:
	* frameworkelement.cpp:
	* dependencyobject.cpp: Remove duplicate and incorrect code
	  when cleaing up the various PropertyValueProviders and make
	  them all use DependencyObject::dispose_value instead. Also
	  instantiate all our hashtables with the value_free_value to
	  make absolutely sure we never forget to delete the value.

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp (Surface::Paint): delete render_list and ctx after
	we're done with them.

	* provider.cpp (RecomputePropertyValue): don't ref Setters and
	cause them to leak.

	* dependencyobject.cpp (SetName): don't leak the name Value*.

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* value.cpp (Value::Copy): implement for MANAGED by creating a new
	gchandle for the target.
	(Value::FreeValue): implement for MANAGED by freeing the gchandle.

2010-05-13  Jeffrey Stedfast  <fejj@novell.com>

	* pal/gtk/install-dialog.cpp (install_xap): Install the unzipped
	Xap instead.

	* utils.cpp (UnzipByteArrayToDir): New convenience function to
	unzip the contents of a GByteArray to a directory.

	* xap.cpp (Unpack): Need to unzClose() the zipfile after a
	succesful extraction.

	* deployment.cpp (find_string): Removed.

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* provider.cpp (StylePropertyValueProvider): clone the Value
	instances we put in our hash table so that we can control their
	lifetime and not access freed instances someone else owns and have
	already deleted.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (start_element): we need to set IsCDataVerbatim == true
	for OutOfBrowserSettings.Blurb in order for drt 8001 to pass.

	* runtime.h (Surface::GetSourceLocation): we need a
	cbinding/pinvoke for this.

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/window-gtk.cpp: MoonWindowGtk::[de]install_application:
	set current deployment.
