@@ -1,3 +1,8 @@
+2010-05-14  Jeffrey Stedfast  <fejj@novell.com>
+
+	* provider.cpp (MapPropertyToDescendant): Fix mappings for
+	FlowDirection and Language properties.
+
 2010-05-14  Alan McGovern  <amcgovern@novell.com>
 
 	* provider.h:
